# satellite_msgs

./: CMakeLists.txt  package.xml
msg/: Coordinate.msg  Monitor.msg  Object.msg  Vehicle.msg
